@@ -43,6 +43,14 @@ setMethod( "getExtension", "Message", function( object, field){
 	if (!is_extension(field)) {
 		stop(paste(name(field), "is not an extension FieldDescriptor."))
 	}
+	# This check causes a CHECK failure in the C++ code, so give
+	# a more user-friendly error here.
+	if (containing_type(field)@type != object@type) {
+		stop(paste("Field", name(field),
+			   "does not match message type (",
+			   containing_type(field)@type, "!=",
+			   object@type, ")"))
+	}
         .Call( "getExtension", object@pointer, field,
               PACKAGE = "RProtoBuf" )
 } )
